[package]
name = "rust-mtg-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = {version = "*", features = ["desktop"]}
serde = { version = "*", features = ["derive"]}
serde_json = "1.0.86"
